# GCrisp-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  run.sh
.cache/clangd/index/: core.cpp.25FE69BE6DEECD91.idx  core.h.EC5A35C1F0312DB0.idx  main.cpp.0B5E9A5FF3D40A39.idx
lib/: CMakeLists.txt
src/: main.c  main.cpp
